ci: enable code analysis in GitHub workflow

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,8 +38,8 @@ jobs:
     - name: Check code
       run: composer check:all
 
-#    - name: Analyse code
-#      run: composer analyse:all
+    - name: Analyse code
+      run: composer analyse:all
 
     - name: Run test suite
       run: composer tests
