--- a/composer.json
+++ b/composer.json
@@ -69,26 +69,26 @@
     "tests:integration": "phpunit --testsuite integration",
 
     "check:lib": "phpcs --standard=phpcs.xml lib",
-    "check:all": "phpcs --standard=phpcs.xml index.php inc install tests",
+    "check:all": "phpcs --standard=phpcs.xml config index.php install tests",
 
+    "format:config": "phpcbf --standard=phpcs.xml config",
     "format:index": "phpcbf --standard=phpcs.xml index.php",
-    "format:inc": "phpcbf --standard=phpcs.xml inc",
     "format:install": "phpcbf --standard=phpcs.xml install",
     "format:lib": "phpcbf --standard=phpcs.xml lib",
     "format:tests": "phpcbf --standard=phpcs.xml tests",
-    "format:all": "phpcbf --standard=phpcs.xml index.php inc install lib tests",
+    "format:all": "phpcbf --standard=phpcs.xml config index.php install lib tests",
 
+    "style:config": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- config",
     "style:index": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- index.php",
-    "style:inc": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- inc",
     "style:install": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- install",
     "style:lib": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- lib",
     "style:tests": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- tests",
 
-    "analyse:all": "phpstan analyse index.php inc install lib tests",
+    "analyse:all": "phpstan analyse config index.php install lib tests",
     "check:psalm": "psalm",
 
+    "check:phpmd:config": "phpmd config ansi cleancode,codesize,controversial,design,naming,unusedcode",
     "check:phpmd:index": "phpmd index.php ansi cleancode,codesize,controversial,design,naming,unusedcode",
-    "check:phpmd:inc": "phpmd inc ansi cleancode,codesize,controversial,design,naming,unusedcode",
     "check:phpmd:install": "phpmd install ansi cleancode,codesize,controversial,design,naming,unusedcode",
     "check:phpmd:lib": "phpmd lib ansi cleancode,codesize,controversial,design,naming,unusedcode",
     "check:phpmd:tests": "phpmd tests ansi cleancode,codesize,controversial,design,naming,unusedcode",
