--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
     "squizlabs/php_codesniffer": "^3.11.2",
     "phpstan/phpstan": "^2.1",
     "friendsofphp/php-cs-fixer": "^3.67",
-    "vimeo/psalm": "^6.10.1",
+    "vimeo/psalm": "dev-master",
     "phpmd/phpmd": "^2.15"
   },
   "scripts": {
