refactor(tests): extract BaseDnsTest to shared TestHelpers namespace for reuse

--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
   "autoload": {
     "psr-4": {
       "Poweradmin\\": "lib/",
-      "PoweradminInstall\\": "install/helpers"
+      "PoweradminInstall\\": "install/helpers",
+      "TestHelpers\\": "tests/helpers"
     }
   },
   "require-dev": {
