--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -39,11 +39,14 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    - name: Check code
+    - name: Check code style
       run: composer check:all
 
-    - name: Analyse code
+    - name: Run static analysis
       run: composer analyse:all
+
+    - name: Run Psalm analysis
+      run: composer check:psalm
 
     - name: Run test suite
       run: composer tests
