--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
     "phpstan/phpstan": "^2.1",
     "friendsofphp/php-cs-fixer": "^3.67",
     "vimeo/psalm": "^6.10.1",
-    "phpmd/phpmd": "^2.15"
+    "phpmd/phpmd": "^2.15",
+    "zircote/swagger-php": "^5.1.1"
   },
   "scripts": {
     "docs": "tools/phpDocumentor",
