--- a/.devcontainer/conf/nginx.conf
+++ b/.devcontainer/conf/nginx.conf
@@ -1,12 +1,62 @@
 server {
     listen 80 default_server;
-
     root /app;
+    index index.php index.html;
 
-    location / {
-        index index.php index.html;
+    # API URL rewrite rules
+    location = /api {
+        rewrite ^ /index.php?page=api last;
     }
 
+    location = /api/v1 {
+        rewrite ^ /index.php?page=api/v1 last;
+    }
+
+    location ~ ^/api/v1/([^/]+)/([^/]+)$ {
+        rewrite ^/api/v1/([^/]+)/([^/]+)$ /index.php?page=api/v1/$1&action=$2 last;
+    }
+
+    location ~ ^/api/v1/([^/]+)/([^/]+)/([^/]+)$ {
+        rewrite ^/api/v1/([^/]+)/([^/]+)/([^/]+)$ /index.php?page=api/v1/$1&action=$2&id=$3 last;
+    }
+
+    # API docs specific rewrite rules
+    location = /api/docs/json {
+        rewrite ^ /index.php?page=api/docs/json last;
+    }
+
+    location = /api/docs {
+        rewrite ^ /index.php?page=api/docs last;
+    }
+
+    # General API handling with CORS
+    location ~ ^/api {
+        add_header Access-Control-Allow-Origin "*" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-API-Key" always;
+        add_header Access-Control-Max-Age "3600" always;
+
+        # Handle OPTIONS pre-flight requests
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+
+        try_files $uri $uri/ /index.php$is_args$args;
+    }
+
+    # Static assets (caching)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires max;
+        log_not_found off;
+        access_log off;
+    }
+
+    # Standard routing
+    location / {
+        try_files $uri $uri/ /index.php?page=$uri&$args;
+    }
+
+    # Handle PHP files
     location ~ \.php$ {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
@@ -15,6 +65,7 @@ server {
         include fastcgi_params;
     }
 
-    error_log /var/log/nginx/error.log;
+    rewrite_log on;
+    error_log /var/log/nginx/error.log notice;
     access_log /var/log/nginx/access.log;
 }
