refactor: move CLI scripts to tools directory and add command-line execution checks

--- a/composer.json
+++ b/composer.json
@@ -96,13 +96,13 @@
       "cypress/",
       "install/",
       "tests",
+      "tools/",
       ".dockerignore",
       ".gitignore",
       ".php-cs-fixer.php",
       "cypress.config.js",
       "DONORS.md",
       "package.json",
-      "phinx.php",
       "phpcs.xml",
       "phpdoc.dist.xml",
       "phpunit.xml.dist",
