--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,11 @@
       "TestHelpers\\": "tests/helpers"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "unit\\": "tests/unit/"
+    }
+  },
   "require-dev": {
     "phpunit/phpunit": "^11.5.2",
     "squizlabs/php_codesniffer": "^3.11.2",
