fix(devcontainer): handle master branch correctly in ARM build script

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -39,11 +39,14 @@ DEBIAN_VERSION=bullseye
 #PDNS_BRANCH=46
 #PDNS_VERSION=4.6.4
 
-PDNS_BRANCH=47
-PDNS_VERSION=4.7.4
+#PDNS_BRANCH=47
+#PDNS_VERSION=4.7.5
 
 #PDNS_BRANCH=48
-#PDNS_VERSION=4.8.4
+#PDNS_VERSION=4.8.5
 
-#PDNS_BRANCH=49
-#PDNS_VERSION=4.9.1
+PDNS_BRANCH=49
+PDNS_VERSION=4.9.5
+
+#PDNS_BRANCH=master
+#PDNS_VERSION=latest
