nginx-conf: removed install and vendor from deny filter.

--- a/nginx.conf.example
+++ b/nginx.conf.example
@@ -109,7 +109,7 @@ server {
         deny all;
     }
     
-    location ~ /(config|lib|install|vendor|tests|tools)/ {
+    location ~ /(config|lib|tests|tools)/ {
         deny all;
     }
     
