--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -49,7 +49,8 @@ services:
       MYSQL_IMAGE: ${MYSQL_IMAGE}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ../sql/pdns/${PDNS_BRANCH}/schema.mysql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../sql/pdns/${PDNS_BRANCH}/schema.mysql.sql:/docker-entrypoint-initdb.d/01-init.sql
+      - ./scripts/mysql-init-poweradmin.sh:/docker-entrypoint-initdb.d/02-poweradmin.sh
       - ./scripts/custom-healthcheck.sh:/custom-healthcheck.sh
     ports:
       - "3306:3306"
@@ -72,7 +73,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - pgsql_data:/var/lib/postgresql/data
-      - ../sql/pdns/${PDNS_BRANCH}/schema.pgsql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../sql/pdns/${PDNS_BRANCH}/schema.pgsql.sql:/docker-entrypoint-initdb.d/01-init.sql
     ports:
       - "5432:5432"
     healthcheck:
