--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,4 +13,9 @@
             <directory>tests/integration</directory>
         </testsuite>
     </testsuites>
+    <groups>
+        <exclude>
+            <group>disabled</group>
+        </exclude>
+    </groups>
 </phpunit>
