config: add PHP 8.1 platform constraint to prevent dependency updates

--- a/composer.json
+++ b/composer.json
@@ -100,6 +100,11 @@
       "rm -rf tests/"
     ]
   },
+  "config": {
+    "platform": {
+      "php": "8.1"
+    }
+  },
   "archive": {
     "exclude": [
       ".devcontainer",
