--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     volumes:
       - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf
       - ../.:/app
+      - sqlite_data:/data
     depends_on:
       - app
 
@@ -116,6 +117,7 @@ services:
       - "8888:80"
     volumes:
       - ../.:/app
+      - sqlite_data:/data
     depends_on:
       - app
 
