chore: clean up Docker build configuration

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,13 @@
 # Poweradmin related files
+addons/
+db/
 install/
 
 # Version Control
 .gitignore
 .git
 .github
+.gitattributes
 
 # IDE
 nbproject
