--- a/composer.json
+++ b/composer.json
@@ -32,23 +32,23 @@
     "cakephp/utility": "^5.2.5",
     "jeremykendall/php-domain-parser": "^6.4.0",
     "psr/log": "^3.0.2",
-    "robmorgan/phinx": "^0.16.9",
+    "robmorgan/phinx": "^0.16.10",
     "symfony/config": "^6.4.22",
-    "symfony/console": "^6.4.22",
+    "symfony/console": "^6.4.23",
     "symfony/filesystem": "^v6.4.13",
-    "symfony/http-foundation": "^6.4.22",
+    "symfony/http-foundation": "^6.4.23",
     "symfony/property-access": "^6.4.18",
-    "symfony/serializer": "^6.4.22",
+    "symfony/serializer": "^6.4.23",
     "symfony/string": "^6.4.21",
-    "symfony/translation": "^6.4.22",
+    "symfony/translation": "^6.4.23",
     "symfony/twig-bridge": "^6.4.22",
-    "symfony/validator": "^6.4.22",
+    "symfony/validator": "^6.4.23",
     "twbs/bootstrap": "^5.3.7",
     "twbs/bootstrap-icons": "^1.13.1",
     "twig/twig": "^3.21.1",
     "pragmarx/google2fa": "^8.0.3",
     "bacon/bacon-qr-code": "^3.0.1",
-    "zircote/swagger-php": "^5.1.3"
+    "zircote/swagger-php": "^5.1.4"
   },
   "suggest": {
     "ext-ldap": "For LDAP support"
@@ -69,7 +69,7 @@
     "phpunit/phpunit": "^10.5",
     "squizlabs/php_codesniffer": "^3.11.2",
     "phpstan/phpstan": "^2.1",
-    "friendsofphp/php-cs-fixer": "^3.67",
+    "friendsofphp/php-cs-fixer": "^v3.84.0",
     "vimeo/psalm": "^5.26",
     "phpmd/phpmd": "^2.15"
   },
