refactor(ci): rename and disable Docker workflow for later merge

--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -1,11 +1,7 @@
 name: Docker Build and Push
 
 on:
-  push:
-    branches: [ "master" ]
-    tags: [ "v*" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch: # Manual trigger only
 
 env:
   REGISTRY: docker.io
