--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,7 +3,7 @@ name: Docker Image Publish
 on:
   push:
     branches:
-      - develop
+      - master
     tags:
       - 'v*'
   workflow_dispatch:
