--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,7 +18,8 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  IMAGE_NAME: poweradmin
+  GHCR_IMAGE_NAME: poweradmin
+  DOCKERHUB_IMAGE_NAME: edmondas/poweradmin
 
 jobs:
   get-versions:
@@ -67,14 +68,22 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Prepare tags
         id: prep
         shell: bash
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          GHCR_IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$GHCR_IMAGE_NAME
+          GHCR_IMAGE_ID=$(echo $GHCR_IMAGE_ID | tr '[A-Z]' '[a-z]')
+          DOCKERHUB_IMAGE_ID=$DOCKERHUB_IMAGE_NAME
           FULL_VERSION=${{ needs.get-versions.outputs.release_version }}
-          echo "tags=${IMAGE_ID}:${FULL_VERSION}" >> "$GITHUB_OUTPUT"
+          echo "tags=${GHCR_IMAGE_ID}:${FULL_VERSION},${DOCKERHUB_IMAGE_ID}:${FULL_VERSION}" >> "$GITHUB_OUTPUT"
 
       - name: Build and push
         uses: docker/build-push-action@v6
