--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -94,16 +94,6 @@ jobs:
             type=semver,pattern={{major}}
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
-      - name: Prepare tags
-        id: prep
-        shell: bash
-        run: |
-          GHCR_IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$GHCR_IMAGE_NAME
-          GHCR_IMAGE_ID=$(echo $GHCR_IMAGE_ID | tr '[A-Z]' '[a-z]')
-          DOCKERHUB_IMAGE_ID=$DOCKERHUB_IMAGE_NAME
-          FULL_VERSION=${{ needs.get-versions.outputs.release_version }}
-          echo "tags=${GHCR_IMAGE_ID}:${FULL_VERSION},${DOCKERHUB_IMAGE_ID}:${FULL_VERSION}" >> "$GITHUB_OUTPUT"
-
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
@@ -119,5 +109,5 @@ jobs:
       - name: Job Summary
         run: |
           echo "### Build Complete 🎉" >> $GITHUB_STEP_SUMMARY
-          echo "- Image: ${{ steps.prep.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Tags: ${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
           echo "- Release Version: ${{ needs.get-versions.outputs.release_version }}" >> $GITHUB_STEP_SUMMARY
