ci: pin Trivy action to version 0.32.0 for stability

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -110,7 +110,7 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         if: github.event_name != 'pull_request'
-        uses: aquasecurity/trivy-action@master
+        uses: aquasecurity/trivy-action@0.32.0
         with:
           image-ref: ${{ fromJSON(steps.meta.outputs.json).tags[0] }}
           format: 'sarif'
