--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -25,32 +25,7 @@ env:
   DOCKERHUB_IMAGE_NAME: edmondas/poweradmin
 
 jobs:
-  get-versions:
-    runs-on: ubuntu-latest
-    outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-      release_version: ${{ steps.version.outputs.release_version }}
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Get version from tag
-        id: version
-        shell: bash
-        run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            echo "release_version=${GITHUB_REF#refs/tags/v}" >> "$GITHUB_OUTPUT"
-          else
-            echo "release_version=edge" >> "$GITHUB_OUTPUT"
-          fi
-
-      - name: Set matrix
-        id: set-matrix
-        shell: bash
-        run: |
-          echo "matrix={}" >> "$GITHUB_OUTPUT"
-
   build-push:
-    needs: get-versions
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -141,4 +116,4 @@ jobs:
         run: |
           echo "### Build Complete 🎉" >> $GITHUB_STEP_SUMMARY
           echo "- Tags: ${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Release Version: ${{ needs.get-versions.outputs.release_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Workflow: ${{ github.workflow }}" >> $GITHUB_STEP_SUMMARY
