--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -66,10 +66,10 @@ jobs:
             ghcr.io/${{ github.repository_owner }}/${{ env.GHCR_IMAGE_NAME }}
             ${{ env.DOCKERHUB_IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' }}
             type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') }}
 
       - name: Build and push
