--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,10 +1,7 @@
 name: Bug Report
 description: File a bug report to help us improve Poweradmin
 title: "[Bug]: "
-labels: ["bug"]
-projects: ["poweradmin/1"]
-assignees:
-  - edmondas
+type: bug
 body:
   - type: markdown
     attributes:
