feat: add modern theme with Bootstrap 5 sidebar layout and mobile responsive design, closes #746

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /templates/*
 /templates/default/custom/*
 !/templates/default
+!/templates/modern
 !/templates/emails
 /templates/emails/custom/*
 !/templates/emails/custom/README.md
