fix(build): remove non-existent db directory from composer scripts

--- a/composer.json
+++ b/composer.json
@@ -79,12 +79,12 @@
     "tests:functional": "phpunit --testsuite functional",
     "tests:all": "phpunit",
 
-    "check:all": "phpcs --standard=phpcs.xml addons config db index.php install lib tests tools dynamic_update.php",
-    "format:all": "phpcbf --standard=phpcs.xml addons config db index.php install lib tests tools dynamic_update.php",
-    "style:all": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- addons config db index.php install lib tests tools dynamic_update.php",
-    "analyse:phpstan": "phpstan analyse --level=3 addons config db index.php install lib tests tools dynamic_update.php",
+    "check:all": "phpcs --standard=phpcs.xml addons config index.php install lib tests tools dynamic_update.php",
+    "format:all": "phpcbf --standard=phpcs.xml addons config index.php install lib tests tools dynamic_update.php",
+    "style:all": "PHP_CS_FIXER_IGNORE_ENV=1 php-cs-fixer fix -- addons config index.php install lib tests tools dynamic_update.php",
+    "analyse:phpstan": "phpstan analyse --level=3 addons config index.php install lib tests tools dynamic_update.php",
     "analyse:psalm": "psalm",
-    "quality:all": "phpmd addons,config,db,index.php,install,lib,tools,dynamic_update.php ansi phpmd.xml",
+    "quality:all": "phpmd addons,config,index.php,install,lib,tools,dynamic_update.php ansi phpmd.xml",
     "analyse:all": [
         "@check:all",
         "@analyse:psalm",
