--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -225,26 +225,26 @@ email_previews:
 # API v1 Routes - RESTful
 api_v1_zones:
   path: /api/v1/zones
-  controller: Poweradmin\Application\Controller\Api\V1\ZonesController
+  controller: Poweradmin\Application\Controller\Api\V1\ZonesController::run
   methods: [GET, POST]
 
 api_v1_zone:
   path: /api/v1/zones/{id}
-  controller: Poweradmin\Application\Controller\Api\V1\ZonesController
+  controller: Poweradmin\Application\Controller\Api\V1\ZonesController::run
   requirements:
     id: '\d+'
   methods: [GET, PUT, DELETE]
 
 api_v1_zone_records:
   path: /api/v1/zones/{id}/records
-  controller: Poweradmin\Application\Controller\Api\V1\ZonesRecordsController
+  controller: Poweradmin\Application\Controller\Api\V1\ZonesRecordsController::run
   requirements:
     id: '\d+'
   methods: [GET, POST]
 
 api_v1_zone_record:
   path: /api/v1/zones/{zone_id}/records/{record_id}
-  controller: Poweradmin\Application\Controller\Api\V1\ZonesRecordsController
+  controller: Poweradmin\Application\Controller\Api\V1\ZonesRecordsController::run
   requirements:
     zone_id: '\d+'
     record_id: '\d+'
@@ -252,24 +252,24 @@ api_v1_zone_record:
 
 api_v1_users:
   path: /api/v1/users
-  controller: Poweradmin\Application\Controller\Api\V1\UsersController
+  controller: Poweradmin\Application\Controller\Api\V1\UsersController::run
   methods: [GET, POST]
 
 api_v1_user:
   path: /api/v1/users/{id}
-  controller: Poweradmin\Application\Controller\Api\V1\UsersController
+  controller: Poweradmin\Application\Controller\Api\V1\UsersController::run
   requirements:
     id: '\d+'
   methods: [GET, PUT, DELETE]
 
 api_v1_permission_templates:
   path: /api/v1/permission-templates
-  controller: Poweradmin\Application\Controller\Api\V1\PermissionTemplatesController
+  controller: Poweradmin\Application\Controller\Api\V1\PermissionTemplatesController::run
   methods: [GET, POST]
 
 api_v1_permission_template:
   path: /api/v1/permission-templates/{id}
-  controller: Poweradmin\Application\Controller\Api\V1\PermissionTemplatesController
+  controller: Poweradmin\Application\Controller\Api\V1\PermissionTemplatesController::run
   requirements:
     id: '\d+'
   methods: [GET, PUT, DELETE]
