--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     networks:
       - internal
     ports:
-      - "8080:80"
+      - "3000:80"
     volumes:
       - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf
       - ../.:/app
@@ -114,10 +114,26 @@ services:
     networks:
       - internal
     ports:
-      - "8888:80"
+      - "3001:80"
     volumes:
       - ../.:/app
       - sqlite_data:/data
+    depends_on:
+      - app
+
+  caddy:
+    image: caddy:2-alpine
+    container_name: caddy
+    networks:
+      - internal
+    ports:
+      - "3002:80"
+    volumes:
+      - ./conf/Caddyfile:/etc/caddy/Caddyfile
+      - ../.:/app
+      - sqlite_data:/data
+      - caddy_data:/data/caddy
+      - caddy_config:/config/caddy
     depends_on:
       - app
 
@@ -176,6 +192,8 @@ volumes:
   mysql_data: { }
   pgsql_data: { }
   sqlite_data: {}
+  caddy_data: {}
+  caddy_config: {}
 
 networks:
   internal:
