chore: add PowerDNS 5.0 database schema files

--- a/.devcontainer/.env
+++ b/.devcontainer/.env
@@ -46,7 +46,10 @@ DEBIAN_VERSION=bullseye
 #PDNS_VERSION=4.8.5
 
 PDNS_BRANCH=49
-PDNS_VERSION=4.9.5
+PDNS_VERSION=4.9.8
+
+#PDNS_BRANCH=50
+#PDNS_VERSION=5.0.0
 
 #PDNS_BRANCH=master
 #PDNS_VERSION=latest
