--- a/.devcontainer/conf/Caddyfile
+++ b/.devcontainer/conf/Caddyfile
@@ -12,13 +12,13 @@
     # Security: Deny access to sensitive directories
     @denied path /config* /lib* /tests* /tools* /vendor*
     @bootstrap path /vendor/twbs/bootstrap* /vendor/twbs/bootstrap-icons*
-    
+
     # Allow Bootstrap files (override general vendor blocking)
     handle @bootstrap {
         file_server
     }
-    
-    # Block sensitive directories
+
+    # Block sensitive directories (excluding bootstrap)
     handle @denied {
         respond "Forbidden" 403
     }
@@ -36,6 +36,16 @@
         file_server
     }
 
+    # Handle OPTIONS preflight requests for CORS
+    @options method OPTIONS
+    handle @options {
+        header Access-Control-Allow-Origin "*"
+        header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
+        header Access-Control-Allow-Headers "Content-Type, Authorization, X-API-Key"
+        header Access-Control-Max-Age "3600"
+        respond "" 204
+    }
+
     # API endpoints with CORS
     @api path /api*
     handle @api {
@@ -43,36 +53,21 @@
         header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
         header Access-Control-Allow-Headers "Content-Type, Authorization, X-API-Key"
         header Access-Control-Max-Age "3600"
-        
-        # Handle preflight OPTIONS requests
-        handle_path /api* {
-            method OPTIONS
-            respond "" 204
-        }
-        
-        # Try to serve the file directly, otherwise pass to PHP
-        try_files {path} {path}/ /index.php?{query}
-        php_fastcgi app:9000
-    }
 
-    # Handle PHP files
-    @php path *.php
-    handle @php {
+        # Forward all API requests to index.php with proper query handling
+        rewrite * /index.php{uri}
         php_fastcgi app:9000 {
             read_timeout 180s
+            env HTTP_AUTHORIZATION {http.request.header.Authorization}
         }
     }
 
-    # Clean URL routing - let Symfony Router handle all routing
-    # This mimics the Apache/Nginx try_files behavior
-    try_files {path} {path}/ /index.php?{query}
-
-    # Final fallback to index.php for clean URLs
-    handle {
-        rewrite * /index.php?{query}
-        php_fastcgi app:9000 {
-            read_timeout 180s
-        }
+    # Handle all other requests - Clean URL routing
+    # Let Symfony Router handle all routing through index.php
+    try_files {path} {path}/ /index.php{uri}
+    php_fastcgi app:9000 {
+        read_timeout 180s
+        env HTTP_AUTHORIZATION {http.request.header.Authorization}
     }
 
     # Enable file server for static content
