--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -75,6 +75,7 @@ services:
     volumes:
       - pgsql_data:/var/lib/postgresql/data
       - ../sql/pdns/${PDNS_BRANCH}/schema.pgsql.sql:/docker-entrypoint-initdb.d/01-init.sql
+      - ./scripts/postgres-init-keycloak.sh:/docker-entrypoint-initdb.d/02-keycloak.sh
     ports:
       - "5432:5432"
     healthcheck:
@@ -101,7 +102,7 @@ services:
     networks:
       - internal
     ports:
-      - "8080:8080"
+      - "8090:8080"
     volumes:
       - sqlite_data:/data
       - ./adminer/login-password-less.php:/var/www/html/plugins-enabled/login-password-less.php
@@ -172,6 +173,30 @@ services:
       - PHPLDAPADMIN_LDAP_HOSTS=ldap
     ports:
       - 8443:443
+
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0
+    container_name: keycloak
+    networks:
+      - internal
+    environment:
+      - KEYCLOAK_ADMIN=admin
+      - KEYCLOAK_ADMIN_PASSWORD=admin
+      - KC_DB=postgres
+      - KC_DB_URL=jdbc:postgresql://pgsql:5432/keycloak
+      - KC_DB_USERNAME=keycloak
+      - KC_DB_PASSWORD=keycloak
+      - KC_HOSTNAME_STRICT=false
+      - KC_HOSTNAME_STRICT_HTTPS=false
+      - KC_HTTP_ENABLED=true
+    ports:
+      - "8080:8080"
+    command: ["start-dev"]
+    depends_on:
+      pgsql:
+        condition: service_healthy
+    volumes:
+      - ./scripts/keycloak-init.sh:/opt/keycloak/bin/keycloak-init.sh
 
   dns:
     image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
