--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -174,29 +174,31 @@ services:
     ports:
       - 8443:443
 
-  keycloak:
-    image: quay.io/keycloak/keycloak:24.0
-    container_name: keycloak
-    networks:
-      - internal
-    environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=admin
-      - KC_DB=postgres
-      - KC_DB_URL=jdbc:postgresql://pgsql:5432/keycloak
-      - KC_DB_USERNAME=keycloak
-      - KC_DB_PASSWORD=keycloak
-      - KC_HOSTNAME_STRICT=false
-      - KC_HOSTNAME_STRICT_HTTPS=false
-      - KC_HTTP_ENABLED=true
-    ports:
-      - "8080:8080"
-    command: ["start-dev"]
-    depends_on:
-      pgsql:
-        condition: service_healthy
-    volumes:
-      - ./scripts/keycloak-init.sh:/opt/keycloak/bin/keycloak-init.sh
+  # Comment out Keycloak by default, uncomment to use
+  # keycloak:
+  #   image: quay.io/keycloak/keycloak:24.0
+  #   container_name: keycloak
+  #   networks:
+  #     - internal
+  #   environment:
+  #     - KEYCLOAK_ADMIN=admin
+  #     - KEYCLOAK_ADMIN_PASSWORD=admin
+  #     - KC_DB=postgres
+  #     - KC_DB_URL=jdbc:postgresql://pgsql:5432/keycloak
+  #     - KC_DB_USERNAME=keycloak
+  #     - KC_DB_PASSWORD=keycloak
+  #     - KC_HOSTNAME_STRICT=false
+  #     - KC_HOSTNAME_STRICT_HTTPS=false
+  #     - KC_HTTP_ENABLED=true
+  #   ports:
+  #     - "8080:8080"
+  #   command: ["start-dev"]
+  #   depends_on:
+  #     pgsql:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ./scripts/keycloak-init.sh:/opt/keycloak/bin/keycloak-init.sh
+
 
   dns:
     image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
