fix(config): remove tools directory blocking from web server configs, closes #792

--- a/.devcontainer/conf/Caddyfile
+++ b/.devcontainer/conf/Caddyfile
@@ -10,7 +10,7 @@
     }
 
     # Security: Deny access to sensitive directories
-    @denied path /config* /lib* /tests* /tools* /vendor*
+    @denied path /config* /lib* /tests* /vendor*
     @bootstrap path /vendor/twbs/bootstrap* /vendor/twbs/bootstrap-icons*
 
     # Allow Bootstrap files (override general vendor blocking)
