--- a/caddy.conf.example
+++ b/caddy.conf.example
@@ -31,7 +31,7 @@
     encode gzip
 
     # Security: Deny access to sensitive directories
-    @denied path /config* /lib* /tests* /tools* /vendor*
+    @denied path /config* /lib* /tests* /vendor*
     @bootstrap path /vendor/twbs/bootstrap* /vendor/twbs/bootstrap-icons*
 
     # Allow Bootstrap files (override general vendor blocking)
