--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,8 @@ package-lock.json
 
 # API test environment files
 .env.api-test
+
+# AI assistant instruction files
+AGENTS.md
+CLAUDE.md
+GEMINI.md
