chore(devcontainer): add automated LDAP test user provisioning

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -38,5 +38,6 @@
     "ldapadmin:8443": {
       "label": "LDAP Admin"
     }
-  }
+  },
+  "postStartCommand": "bash .devcontainer/ldap/setup-ldap-test.sh"
 }
